--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "15.3.2",
     "react-native": "0.33.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
-    "react-native-vector-icons": "^2.1.0"
+    "react-native-vector-icons": "^2.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   }
 }
