--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "moment": "^2.15.1",
     "react": "15.3.2",
     "react-native": "0.33.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
